--- a/mysite/.config/uwsgi/mysite.ini
+++ b/mysite/.config/uwsgi/mysite.ini
@@ -1,9 +1,9 @@
 [uwsgi]
-chdir = /srv/<레포명>/<프로젝트명>/
-module =<wsgi있는 폴더명>.wsgi:application home = <가상환경 경로>
+chdir = /srv/deploy/mysite/
+module =mysite.wsgi:application home = /home/ubuntu/myvenv
 uid = ubuntu
 gid = ubuntu
-http = :<포트>
+http = :8000
 enable-threads = true
 master = true
 vacuum = true
