--- a/mysite/.config/uwsgi/mysite.ini
+++ b/mysite/.config/uwsgi/mysite.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 chdir = /srv/deploy/mysite/
-module =mysite.wsgi:application home = /home/ubuntu/myvenv
+module =mysite.wsgi:application 
+home = /home/ubuntu/myvenv
 uid = ubuntu
 gid = ubuntu
 http = :8000
