--- a/mysite/.config/uwsgi/mysite.ini
+++ b/mysite/.config/uwsgi/mysite.ini
@@ -4,9 +4,13 @@ module =mysite.wsgi:application
 home = /home/ubuntu/myvenv
 uid = ubuntu
 gid = ubuntu
-http = :8000
+socket = /tmp/mysite.sock 
+chmod-socket = 666 
+chown-socket = ubuntu:ubuntu
 enable-threads = true
 master = true
 vacuum = true
 pidfile = /tmp/mysite.pid
-logto = /var/log/uwsgi/mysite/@(exec://date +%%Y-%%m-%%d).log log-reopen = true
+logto = /var/log/uwsgi/mysite/@(exec://date +%%Y-%%m-%%d).log 
+log-reopen = true
+
