--- a/mysite/.config/uwsgi/uwsgi.service
+++ b/mysite/.config/uwsgi/uwsgi.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=uWSGI service 
 After=syslog.target
+
 [Service]
 ExecStart=/home/ubuntu/myvenv/bin/uwsgi -i /srv/deploy/mysite/.config/uwsgi/mysite.ini
 Restart=always 
-KillSignal=SIGQUIT Type=notify 
+KillSignal=SIGQUIT 
+Type=notify 
 StandardError=syslog 
 NotifyAccess=all
 
